--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-21 21:15+0000\n"
-"PO-Revision-Date: 2017-11-21 21:18+0000\n"
+"PO-Revision-Date: 2017-11-21 21:21+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -218,7 +218,7 @@ msgid ""
 "city, make remotely checking merchandising actions at the point of sale a "
 "simple task."
 msgstr ""
-"Controle de forma eficiente a como o seu promotor de trade marketing se "
+"Controle de forma eficiente como o seu promotor de trade marketing se "
 "movimenta pela cidade, faça uma verificação remota das ações de "
 "merchandising no ponto de venda uma tarefa simples."
 
