--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-27 13:27+0000\n"
-"PO-Revision-Date: 2017-11-27 13:40+0000\n"
+"POT-Creation-Date: 2017-11-27 13:46+0000\n"
+"PO-Revision-Date: 2017-11-27 13:48+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -337,14 +337,14 @@ msgstr ""
 #: mymwebsite/templates/cases/assetmanagement.html:35
 msgid ""
 "You will never loose an equipment photo again, and you will know exactly "
-"when and where that photo was taken. Do you need more reliable readings from "
+"when and where that photo was taken. If you need more reliable readings from "
 "your equipment hour meters to have a better planning for your maintenance, "
 "you can do that as well!"
 msgstr ""
 "Você nunca perderá uma foto de equipamento novamente, e você saberá "
-"exatamente quando e onde essa foto foi tirada. Você precisa de leituras mais "
-"confiáveis dos contadores de horas do seu equipamento para ter um melhor "
-"planejamento para sua manutenção, você também pode fazer isso!"
+"exatamente quando e onde essa foto foi tirada. Se você precisa de leituras "
+"mais confiáveis dos contadores de horas do seu equipamento para ter um "
+"melhor planejamento para sua manutenção, você também pode fazer isso!"
 
 #: mymwebsite/templates/cases/assetmanagement.html:36
 msgid "Do you think that this can make your life easier? We agree with that! "
@@ -2117,7 +2117,7 @@ msgstr "Clique para ver um exemplo do que você pode distribuir para todos!"
 
 #: mymwebsite/templates/howto/assetmanagement.html:45
 msgid ""
-"You can, for instance organize your assets per groups in the differnt VPs. "
+"You can, for instance organize your assets per groups in the different VPs. "
 "The photos will always be organized and available in our cloud storage."
 msgstr ""
 "Você pode, por exemplo, organizar seus ativos por grupos nos diferentes VPs. "
@@ -2138,7 +2138,7 @@ msgid "Using your own data"
 msgstr "Usando seus dados"
 
 #: mymwebsite/templates/howto/assetmanagement.html:46
-msgid " to learn how to gather the data related to your equipemnt and tools."
+msgid " to learn how to gather the data related to your equipment and tools."
 msgstr ""
 " para aprender a reunir os dados relacionados aos seus equipamentos e "
 "ferramentas."
